Overview of changes from 1.2.x to 1.3.0-alpha
==
* New features
  - 
  - Input method icons
    - Replace with inputmethod-icons 1.1.1

Overview of changes from 1.2.0 to 1.2.1
==
* Fixes
  - Prime
    - Sync prime.scm with prime-1.0.0.1.
    - Improve connection using unix domain socket.
    - Use unix domain socket connection by default.

  - uim-candwin-qt
    - Fix displaying candidates in input prediction.

  - Qt immodule
    - Fix displaying candidates in input prediction.
    - Fix key handling with control modifier.

Overview of changes from 1.2.0-beta to 1.2.0
==
* Fixes
  o Minor
    - Prime
      - Fix initialization of the context upon IM switch (Konosuke).

    - uim-pref-qt
      - Handle Meta modifier.
    - uim-toolbar-qt
      - Fix to shrink toolbar when any of the buttons are removed.

    - uim.el
      - Fix displaying candidates in input prediction (Konosuke).
      - Fix displaying candidates with appendix on uim-prime (Konosuke).

* Others
  - Bump libuim version.

Overview of changes from 1.2.0-alpha to 1.2.0-beta
==
* Fixes
  o Minor
    - Anthy
    - Canna
    - Mana
      - Commit appropriate space letter in halfwidth_alnum input mode.

    - Qt immodule
      - Fix getting default IM in some environments.

Overview of changes from 1.1.x to 1.2.0-alpha
==
* New features
  - Anthy
    - Input prediction support.
    - Half-width and full-width alphanumeric conversion with a specific
      segment.
    - Add half-width alphanumeric input mode.
    - Change definition of some input-mode transition keys.

  - Canna
  - Mana
    - Hiragana, katakana, half-width katakana, half- and full-width
      alphanumeric conversion with a specific segment.
    - Add half-width alphanumeric input mode.
    - Change definition of some input-mode transition keys.

  - uim-dict-gtk
    - Support Canna private dictionary.

  - Gtk+ immodule
  - Qt immodule
    - Support locale dependent Compose file and ~/.XCompose

* Fixes
  - Anthy, Canan, Mana