@@ -1,7 +1,9 @@
 Overview of changes from 1.2.x to 1.3.0-alpha
 ==
 * New features
-  - 
+  - Obsolete experimental surrounding text API
+  - Add text acquisition API and support it in GTK+ and Qt bridges
+  - Add text injection API (uim_input_string())
   - Input method icons
     - Replace with inputmethod-icons 1.1.1
 
